src/test/resources/tokens/invalid/field_descriptor_invalid_char.unpick
unpick v3
target_field foo.Bar baz X g